force-app/main/default/objects/Account_Opco_Info__c/Account_Opco_Info__c.object-meta.xml
<CustomObject>
    <label>Account Opco Info</label>
    <nameField>
        <label>OpCo Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Opco Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>