force-app/main/default/objects/Account_Opco_Info__c/fields/Accmcredit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Accmcredit_Limit__c</fullName>
    <label>Accmcredit Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>