force-app/main/default/objects/Account_Opco_Info__c/fields/Accmdate_Created__c.field-meta.xml
<CustomField>
    <fullName>Accmdate_Created__c</fullName>
    <label>Accmdate Created</label>
    <length>255</length>
    <type>Text</type>
</CustomField>