force-app/main/default/objects/Account_Opco_Info__c/fields/Account_Opco_Info__c.field-meta.xml
<CustomField>
    <fullName>Account_Opco_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Opco Info</label>
    <referenceTo>Account_Opco_Info__c</referenceTo>
    <relationshipLabel>Account Opco Info</relationshipLabel>
    <relationshipName>Account_Opco_Info</relationshipName>
    <type>Lookup</type>
</CustomField>