force-app/main/default/objects/Account_Opco_Info__c/fields/AR_Terms__c.field-meta.xml
<CustomField>
    <fullName>AR_Terms__c</fullName>
    <label>AR Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>