force-app/main/default/objects/Account_Opco_Info__c/fields/BillingAddressType__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressType__c</fullName>
    <label>BillingAddressType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>