force-app/main/default/objects/Account_Opco_Info__c/fields/DefaultAddress__c.field-meta.xml
<CustomField>
    <fullName>DefaultAddress__c</fullName>
    <label>DefaultAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>