force-app/main/default/objects/Account_Opco_Info__c/fields/Ext_SFAccCusNum__c.field-meta.xml
<CustomField>
    <fullName>Ext_SFAccCusNum__c</fullName>
    <label>Ext SFAccCusNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>