force-app/main/default/objects/Account_Opco_Info__c/fields/HoldInvoices__c.field-meta.xml
<CustomField>
    <fullName>HoldInvoices__c</fullName>
    <label>HoldInvoices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>