force-app/main/default/objects/Account_Opco_Info__c/fields/Opco__c.field-meta.xml
<CustomField>
    <fullName>Opco__c</fullName>
    <label>Opco</label>
    <referenceTo>Opco__c</referenceTo>
    <relationshipLabel>Account Opco Info</relationshipLabel>
    <relationshipName>Account_Opco_Info</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>