force-app/main/default/objects/Account_Opco_Info__c/fields/Related_AddressNumber__c.field-meta.xml
<CustomField>
    <fullName>Related_AddressNumber__c</fullName>
    <label>Related-AddressNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>